XML 8.8.23 päivitys osa 1/2 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.8.23. Päivitys osa 1/2.

--- a/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
@@ -23,6 +23,19 @@
   <string name="abc_action_menu_overflow_description">Lisää</string>
   <string name="abc_action_mode_done">Valmis</string>
   <string name="abc_action_mode_select_all">Valitse kaikki</string>
+  <string name="abc_activity_chooser_view_see_all">Näytä kaikki</string>
+  <string name="abc_activitychooserview_choose_application">Valitse sovellus</string>
+  <string name="abc_capital_off">POIS KÄYTÖSTÄ</string>
+  <string name="abc_capital_on">KÄYTÖSSÄ</string>
+  <string name="abc_search_hint">Haku…</string>
+  <string name="abc_searchview_description_clear">Tyhjennä kysely</string>
+  <string name="abc_searchview_description_query">Hakukysely</string>
+  <string name="abc_searchview_description_search">Haku</string>
+  <string name="abc_searchview_description_submit">Lähetä kysely</string>
+  <string name="abc_searchview_description_voice">Puhehaku</string>
+  <string name="abc_shareactionprovider_share_with">Jaa</string>
+  <string name="abc_shareactionprovider_share_with_application">Jaa sovelluksessa %s</string>
+  <string name="abc_toolbar_collapse_description">Collapse</string>
   <string name="accept_cookies_confirm_message">Jotkus sivut saattaa käyttäytyä omituisesti, jos poistat tämän ominaisuuden käytöstä.</string>
   <string name="accessibility_button_clear">Tyhjennä teksti</string>
   <string name="account_prifix">Tili:</string>
@@ -159,7 +172,6 @@
   <string name="check_security_tip_user_agreement">Käyttöehdot</string>
   <string name="choosertitle_sharevia">Jaa sovelluksessa</string>
   <string name="clear_history">Tyhjennä historia</string>
-  <string name="clear_most_visited">Viimeaikainen historia</string>
   <string name="clear_search_history">Tyhjennä historia</string>
   <string name="clear_video_download">Tyhjennä videot</string>
   <string name="clip_dialog_title">Avataanko kopioitu URL-osoite?</string>
@@ -321,6 +333,7 @@ katsoaksesi avoimia välilehtiä muilta laitteilta."</string>
   <string name="exit">Poistu</string>
   <string name="exit_browser_warning">Poistutaanko Selaimesta nyt?</string>
   <string name="exit_fullscreen">Poistu kokonäyttötilasta</string>
+  <string name="expand_button_title">Lisäasetukset</string>
   <string name="favorite">Lisää suosikkeihin</string>
   <string name="file_dir">Vaihda kansiota</string>
   <string name="file_name">"Nimi: "</string>
@@ -357,6 +370,25 @@ katsoaksesi avoimia välilehtiä muilta laitteilta."</string>
   <string name="gold_medals">Kultamitalit</string>
   <string name="google_bookmarks">Google</string>
   <string name="green_kid_block_request">Vanhemmat on estänyt verkkosivuston vierailun.</string>
+  <string name="guide_chosen_type_main_title">Kerro meille mistä pidät</string>
+  <string name="guide_chosen_type_subtitle">Merkitse kiinnostuksen kohteesi saadaksesi niihin liittyviä suosituksia</string>
+  <string name="guide_entertainment_text">viihde</string>
+  <string name="guide_fashion_text">muoti</string>
+  <string name="guide_finance_text">talous</string>
+  <string name="guide_games_text">pelit</string>
+  <string name="guide_history_text">historia</string>
+  <string name="guide_human_type_main_title">Selain, joka ymmärtää sinua</string>
+  <string name="guide_human_type_subtitle">Saa uskomattomia suosituksia</string>
+  <string name="guide_label_chosen_hint">Voit valita enintään %d kategoriaa</string>
+  <string name="guide_military_text">sotilas</string>
+  <string name="guide_motor_text">moottori</string>
+  <string name="guide_politics_text">politiikka</string>
+  <string name="guide_rocket_type_main_title">Salaman nopea</string>
+  <string name="guide_rocket_type_subtitle">Uskomaton nopeus, sulava käyttöliittymä</string>
+  <string name="guide_skip">Ohita</string>
+  <string name="guide_sports_text">urheilu</string>
+  <string name="guide_start_experience">Aloita</string>
+  <string name="guide_tech_text">teknologia</string>
   <string name="have_sent_bookmark_to_home_screen">Lisätty Aloitusnäytölle</string>
   <string name="hint">Vihje</string>
   <string name="history">Historia</string>
@@ -874,12 +906,10 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
   <string name="positive_confirm_message">Poista käytöstä siitä huolimatta</string>
   <string name="pref_accept_quicklink_push">Uutissyöte</string>
   <string name="pref_accessibility_title">Esteettömyys</string>
-  <string name="pref_accessibility_url_shortcut_enter_summary">Yleiset kirjainyhdistelmät voidaan syöttää yhdellä napautuksella osoitepalkissa</string>
-  <string name="pref_accessibility_url_shortcut_enter_title">Nopea URL-osoitteen syöttö</string>
   <string name="pref_adblock_counts">%d estetty</string>
   <string name="pref_adblock_title">Mainostenesto</string>
   <string name="pref_advert_null">Kohteita ei ole merkitty mainoksiksi. Pidä verkkosivulla olevaa kohdetta pohjassa merkitäksesi sen.</string>
-  <string name="pref_auto_update_under_wifi">Päivitä käyttäen Wi-Fi-yhteyttä</string>
+  <string name="pref_auto_update_under_wifi">Päivitä paketti automaattisesti käyttäen Wi-Fi-yhteyttä</string>
   <string name="pref_automatic_matching_searchengines_title">Vaihda usein käytettyyn hakukoneeseen</string>
   <string name="pref_cancel_screen">Poista esto</string>
   <string name="pref_category_hint">Kategoria</string>
@@ -1058,6 +1088,7 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
   <string name="search_hint">Haku</string>
   <string name="search_keyword_browser">Selain</string>
   <string name="search_label">Selain</string>
+  <string name="search_menu_title">Haku</string>
   <string name="search_path_browser">Asetukset/Asennetut sovellukset/Selain</string>
   <string name="search_s139">139</string>
   <string name="search_settings_description">Kirjanmerkit ja verkkohistoria</string>
@@ -1147,8 +1178,8 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
   <string name="suggest_access_item_weather_mark">SÄÄ</string>
   <string name="suggest_access_item_yellow_mark">HAKEMISTOT</string>
   <string name="suggest_access_music">Mi Musiikki</string>
-  <string name="suggest_item_delete_text">Poista</string>
   <string name="suggest_open_app_failed">Tätä sovellusta ei voitu avata</string>
+  <string name="suggestion_clear_item_message">Vahvistatko tämän kohteen poiston?</string>
   <string name="suggestion_express_button_query_more">NÄYTÄ LISÄÄ</string>
   <string name="suggestion_express_button_text_query">TARKISTA</string>
   <string name="suggestion_express_exception_net">Verkkoyhteyttä ei voitu muodostaa. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
@@ -1158,6 +1189,10 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
   <string name="suggestion_express_input_hint_inside">Anna seurantanumero</string>
   <string name="suggestion_express_input_hint_out">Seurantanumero:</string>
   <string name="suggestion_express_title">Seuraa pakettiasi</string>
+  <string name="suggestion_hotwords_title_change_button_text">VAIHDA LISÄÄ</string>
+  <string name="suggestion_hotwords_title_text">Haku</string>
+  <string name="suggestion_input_history_title_text">SYÖTTÖHISTORIA</string>
+  <string name="suggestion_input_hitory_clear_text">TYHJENNÄ</string>
   <string name="suggestion_lottery_detail_pour">%s MUISTIO</string>
   <string name="suggestion_lottery_detail_price">JOKAINEN MUISTIO ON ARVOLTAAN %s YUAN</string>
   <string name="suggestion_lottery_detail_text">TÄMÄ KIERROS %s</string>
@@ -1203,8 +1238,9 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
   <string name="url_copy_done">URL kopioitiin leikepöydälle</string>
   <string name="url_find_on_page_result">Näytä Selaimessa</string>
   <string name="url_find_on_page_result_item">Näytä kaikki kohteen \"%s\" tekstit</string>
-  <string name="url_hint">Syötä URL tai etsi netistä</string>
-  <string name="url_hint_from_search">Syötä hakusana</string>
+  <string name="url_hint">Anna URL-osoite tai hae verkosta</string>
+  <string name="url_hint_from_search">Anna hakusana</string>
+  <string name="url_hint_head">Kaikki hakevat：</string>
   <string name="url_opened_in_background">Avaa uuteen välilehteen taustalle</string>
   <string name="url_suggest_indicator_bookmark">Kirjanmerkit/Historia</string>
   <string name="url_suggest_indicator_hoturl">Suosittu</string>
@@ -1217,6 +1253,8 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
   <string name="v5_deselect_all">Poista valinnat</string>
   <string name="v5_edit_mode_title_empty">0 valittu</string>
   <string name="v5_select_all">Valitse kaikki</string>
+  <string name="v7_preference_off">POIS KÄYTÖSTÄ</string>
+  <string name="v7_preference_on">KÄYTÖSSÄ</string>
   <string name="version_check_button_checking">Tarkistetaan…</string>
   <string name="version_check_button_default">Tarkista päivitykset</string>
   <string name="version_check_button_download_failed">Jatka latausta</string>
