--- a/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
@@ -31,6 +31,8 @@
   <string name="app_label">Viestit</string>
   <string name="app_name">Laitteet</string>
   <string name="attach_image">Kuvat</string>
+  <string name="attach_rcs_file">Tiedosto</string>
+  <string name="attach_rcs_location">Sijainti</string>
   <string name="attach_record_sound">Nauhoita ääni</string>
   <string name="attach_record_video">Tallenna video</string>
   <string name="attach_slideshow">Diaesitys</string>
@@ -66,6 +68,7 @@
   <string name="button_resend_message">Lähetä uudelleen</string>
   <string name="button_unfold">Avaa</string>
   <string name="call_sender">Soita lähettäjälle</string>
+  <string name="can_not_send_by_rcs">Ei voi käyttää China Mobile:n viestintään</string>
   <string name="cannot_add_picture_and_video">Videota ja kuvaa ei voi lisätä yhdelle dialle.</string>
   <string name="cannot_add_slide_anymore">Dioja ei voi lisätä enempää.</string>
   <string name="cannot_forward_drm_obj">Viestin sisältämää DRM kohdetta ei voi välittää eteenpäin.</string>
@@ -125,6 +128,7 @@
   <string name="conversation_style">kupla</string>
   <string name="converting_to_picture_message">Muunnetaan multimediaviestiksi…</string>
   <string name="converting_to_text_message">Muunnetaan tekstiviestiksi…</string>
+  <string name="converting_vcard_failed">Yhteystietoa ei voitu muuntaa</string>
   <string name="copy_message_text">Kopioi</string>
   <string name="copy_message_text_success">Kopioitu</string>
   <string name="copy_to_sdcard">Tallenna liitetiedosto</string>
@@ -142,9 +146,19 @@
   <string name="delete_wild_sims_title">Poista valitut numerot</string>
   <string name="delivery_report_activity">Toimitusraportti</string>
   <string name="delivery_toast_body">%s vastaanotti viestin</string>
+  <string name="delivery_toast_body_more">%1$s ja %2$d henkilö(ä) vastaanotti viestin</string>
   <string name="dialog_message_fake_cell_detect_error">Haluatko korjata tämän viestin virheitä? MIUI:n tulee lähettää puhelinnumero (%1$s), viestin sisältö ja sijaintitiedot palvelimilleen tehdäkseen tämän.</string>
+  <string name="dialog_message_mx">Mi Viestin avulla voit lähettää viestejä toisille MIUI-laitteille ilman maksuja. Mi Viestin aktivoimiseen vaaditaan lähtevä tekstiviesti. Operaattorisi veloittaa sinua tästä viestistä. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen Mi Viestin käyttämistä.</string>
+  <string name="dialog_message_mx_rcs">Mi Viestin avulla voit lähettää viestejä toisille MIUI-laitteille ja China Mobile -käyttäjille ilman maksuja. Mi Viestin aktivoimiseen vaaditaan lähtevä tekstiviesti. Operaattorisi veloittaa sinua tästä viestistä. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen Mi Viestin käyttämistä. Hyväksytkö?</string>
+  <string name="dialog_message_networking">Viestisovelluksen on yhdistettävä internetiin ja saatava sijaintitietosi, jotta se voi tarjota Älykästä Viestintää, Lähettäjän ID-tunnistuksen ja muita palveluita. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen näiden palveluiden käyttämistä. Sallitaanko?</string>
+  <string name="dialog_message_networking_mx">Mi Viestin avulla voit lähettää viestejä toisille MIUI-laitteille ilman maksuja. Mi Viestin aktivoimiseen vaaditaan lähtevä tekstiviesti. Operaattorisi veloittaa sinua tästä viestistä. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen Mi Viestin käyttämistä. Viestisovelluksen on yhdistettävä internetiin ja saatava sijaintitietosi, jotta se voi tarjota Älykästä Viestintää, Lähettäjän ID-tunnistuksen ja muita palveluita. Sallitaanko?</string>
+  <string name="dialog_message_networking_mx_rcs">Mi Viestin avulla voit lähettää viestejä toisille MIUI-laitteille ja China Mobile -käyttäjille ilman maksuja. Mi Viestin aktivoimiseen vaaditaan lähtevä tekstiviesti. Operaattorisi veloittaa sinua tästä viestistä. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen Mi Viestin käyttämistä. Viestisovelluksen on yhdistettävä internetiin ja saatava sijaintitietosi, jotta se voi tarjota Älykästä Viestintää, Lähettäjän ID-tunnistuksen ja muita palveluita. Sallitaanko?</string>
+  <string name="dialog_message_networking_rcs">China Mobile:n viestinnän avulla voit lähettää viestejä toisille China Mobile -käyttäjille ilman maksuja. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen China Mobile viestinnän käyttämistä. Viestisovelluksen on yhdistettävä internetiin ja saatava sijaintitietosi, jotta se voi tarjota Älykästä Viestintää, Lähettäjän ID-tunnistuksen ja muita palveluita. Sallitaanko?</string>
+  <string name="dialog_message_rcs">China Mobile:n viestinnän avulla voit lähettää viestejä toisille China Mobile -käyttäjille ilman maksuja. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen China Mobile viestinnän käyttämistä. Hyväksytkö?</string>
   <string name="dialog_message_sms_report">Roskaviestit ja lähettäjän tiedot lähetetään MIUI:lle, kun ilmoitat niistä. Niitä käytetään vain parantaakseen MIUI:n roskaviestin suodattimia.</string>
   <string name="dialog_title_fake_cell_detect_error">Korjaaminen</string>
+  <string name="dialog_title_mx_rcs">Mi Viesti</string>
+  <string name="dialog_title_networking">Käyttöehdot</string>
   <string name="disable_notifications_dialog_message">Lopetetaanko tekstiviesti-ilmoituksien kaksoiskappaleet oletus Viestintäsovelluksesta?</string>
   <string name="disabled">Pois päältä</string>
   <string name="discard">Hylkää</string>
@@ -177,6 +191,7 @@
   <string name="ex_type_guide">Tiedot</string>
   <string name="ex_type_mx">Mi Viesti</string>
   <string name="ex_type_sms">SMS/MMS</string>
+  <string name="exceed_length_limit">超出最大长度界限</string>
   <string name="exceed_message_size_limitation">Viestin koon raja saavutettu.</string>
   <string name="exceed_message_size_limitation_add_slide">Viestin koko ei ole tarpeeksi iso dian lisäämiselle</string>
   <string name="exceed_message_text_limitation">Viestin tekstin pituuden raja saavutettu.</string>
@@ -201,6 +216,7 @@
   <string name="file_width_height">Koko:</string>
   <string name="force_touch_new_message_title">Uusi viesti</string>
   <string name="forward_from">Välitetty lähettäjältä:</string>
+  <string name="forward_message_select_title">Välitä viesti</string>
   <string name="forward_prefix">"Fwd: "</string>
   <string name="found_old_messages">Lähetetäänkö viestit %1$s &gt; %2$s?</string>
   <string name="found_old_messages_title">Lähetä viestit toisesta SIM-korteistasi?</string>
@@ -210,10 +226,17 @@
   <string name="found_wild_messages_title">Synkronoi viestit Mi Pilvestä</string>
   <string name="from_label">"Lähettäjä: "</string>
   <string name="from_pkg_name">Sovelluksesta:</string>
+  <string name="group_already_kicked_hint">你不在这个群里，无法发送消息</string>
   <string name="group_message">Ryhmäviesti</string>
+  <string name="group_message_title">群聊消息</string>
+  <string name="group_not_exist_hint">群已经被解散了，无法发送消息</string>
+  <string name="group_notify_message_title">群通知消息</string>
+  <string name="group_rejoin_failed">群操作失败</string>
   <string name="group_resend_message">Lähetä uudelleen (%d)</string>
   <string name="group_verification_codes_summary">Ryhmitä kertakäyttösalasanat automaattisesti keskenään</string>
   <string name="group_verification_codes_title">Ryhmitä kertakäyttösalasanat</string>
+  <string name="group_view_settings_disolved">群已经被解散，无法查看群资料</string>
+  <string name="group_view_settings_not_memeber">不在这个群里，无法查看群资料</string>
   <string name="guild_add_attachments">Lisää hymiöitä ja muuta sisältöä napauttamalla</string>
   <string name="guild_add_recipients">Lisää vastaanottajia osoitekirjasta napauttamalla</string>
   <string name="guild_msim_switcher">Vaihda SIM-kortteja napauttamalla</string>
@@ -286,15 +309,18 @@
   <string name="message_too_big_for_video">Viesti on liian iso lisätäkseen videon.</string>
   <string name="message_type_label">"Tyyppi: "</string>
   <string name="messagelist_sender_self">Minä</string>
+  <string name="millionbyte">Mt</string>
   <string name="mms">MMS</string>
   <string name="move_down">Siirrä alas</string>
   <string name="move_up">Siirrä ylös</string>
+  <string name="msg_no_member_selected">请至少选择一个联系人.</string>
   <string name="msg_type_hint_mms">Multimediaviesti (MMS)</string>
   <string name="msg_type_hint_mms_omit">MMS</string>
   <string name="msg_type_hint_mx">Mi Viesti</string>
   <string name="msg_type_hint_mx_omit">Mi Msg</string>
   <string name="msg_type_hint_sms">Tekstiviesti</string>
   <string name="msg_type_hint_sms_omit">SMS</string>
+  <string name="msg_type_sms_rcs">SMS, MMS, ja internetviestit</string>
   <string name="msglist_continue_to_pull_for_more">Näytä lisää vetämällä alas</string>
   <string name="msglist_more_refreshing">Päivitetään…</string>
   <string name="msglist_no_more_to_refresh">On jo ajan tasalla</string>
@@ -353,6 +379,7 @@
   <string name="mx_stranger_recommend_msg">Estä Mi Viestit tuntemattomilta numeroilta napauttamalla</string>
   <string name="mx_type_guide">Mi Viestillä voit lähettää viestejä toisille MIUI:n käyttäjille ilman lisäkustannuksia</string>
   <string name="need_download">Synkronoidaan…</string>
+  <string name="network_error_description">Tapahtui verkkovirhe. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="networking_allow_continue">Salli</string>
   <string name="networking_allow_desc">Mi Viestin täytyy yhdistää internetiin toimiakseen normaalisti. Tarjotakseen ilmaisia viesti- ja äänipalveluita, tunnistaakseen tuntemattomia numeroita, suodattaakseen roskaposteja ja ottaakseen muita ominaisuuksia käyttöön, Mi Viestin täytyy käyttää Hakemistoa. Sallitaanko Hakemiston yhdistää internetiin, hakea sijaintitietosi ja lukea yhteystietosi?</string>
   <string name="networking_allow_desc_without_mx">Mi Viestin täytyy yhdistää internetiin toimiakseen normaalisti. Tunnistaakseen tuntemattomia numeroita, suodattaakseen roskaposteja ja ottaakseen muita ominaisuuksia käyttöön, Mi Viestin täytyy käyttää Hakemistoa. Sallitaanko Hakemiston yhdistää internetiin, hakea sijaintitietosi ja lukea yhteystietosi?</string>
@@ -369,6 +396,7 @@
   <string name="no_subject_view">(Ei otsikkoa)</string>
   <string name="non_english_subject_limit">13 merkin raja</string>
   <string name="nosend_message">Älä lähetä</string>
+  <string name="not_prepare_for_send">Ei lähetettävää viestiä</string>
   <string name="notification_channel_msg_description">Ilmoitukset viesteistä</string>
   <string name="notification_channel_msg_name">Viestit</string>
   <string name="notification_channel_other_description">Muut ilmoitukset</string>
@@ -478,6 +506,7 @@
   <string name="privacy_password_title2">Käytä Yksityisyydensuojan salasanaa</string>
   <string name="privacy_password_title3">Päivitä salasanasi</string>
   <string name="privacy_password_title4">Salasana päivitetty</string>
+  <string name="privacy_policy">Tietosuojakäytäntö</string>
   <string name="private_message">Yksityinen viestintä</string>
   <string name="private_new_notification">Viestin ilmoitukset</string>
   <string name="private_protect">Yksityisyydensuoja</string>
@@ -486,11 +515,47 @@
   <string name="prvate_contact">Yksityiset yhteystiedot</string>
   <string name="quick_reply">Vastaa</string>
   <string name="rate_limit_surpassed">OK</string>
+  <string name="rcs_auto_resend_mms">Muunna multimediaviestiksi</string>
+  <string name="rcs_auto_resend_sms">Muunna tekstiviestiksi</string>
+  <string name="rcs_auto_resume">Jatka keskeytettyjä lähetyksiä automaattisesti</string>
+  <string name="rcs_auto_resume_only_by_wifi">Jatka lähetyksiä vain Wi-Fi-yhteydellä</string>
+  <string name="rcs_create_new_group">新建群聊</string>
+  <string name="rcs_dspt">China Mobile -käyttäjien käyttöönoton jälkeen, lähetä viestit oletuksena Wi-Fi- tai mobiiliverkolla.</string>
+  <string name="rcs_forward_faild">Välittäminen epäonnistui</string>
+  <string name="rcs_forward_successful">Välitettiin onnistuneesti</string>
+  <string name="rcs_group_notification_invitation">群邀请</string>
+  <string name="rcs_message">China Mobile Viestintä</string>
+  <string name="rcs_message_disable">Tätä viestiä ei voi lukea toisessa tilassa</string>
+  <string name="rcs_msg">China Mobile Viestintä</string>
+  <string name="rcs_not_online">China Mobile Viestintää ei voi käyttää. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
+  <string name="rcs_offline_hint">China Mobile Viestintä on offline-tilassa. Tätä viestiä ei voi välittää.</string>
+  <string name="rcs_recipient_type_contact">Välitä yhteystiedolle</string>
+  <string name="rcs_recipient_type_group">转发到群</string>
+  <string name="rcs_recipient_type_pc">Välitä tietokoneelle</string>
+  <string name="rcs_resend_not_online">China Mobile Viestintää ei voi käyttää</string>
+  <string name="rcs_resend_sim_card_not_insert">Näyttää siltä, että SIM-korttiasi ei ole asennettu</string>
+  <string name="rcs_send_rms_remind_change">Asetukset</string>
+  <string name="rcs_send_rms_remind_desp">China Mobile Viestintä on pikaviestintäpalvelu, jonka tarjoaa China Mobile. Voit poistaa tämän ominaisuuden käytöstä Asetuksista.</string>
+  <string name="rcs_send_rms_remind_title">Lähetä viestejä käyttäen China Mobile Viestintää</string>
+  <string name="rcs_setting">China Mobile Viestinnän asetukset</string>
+  <string name="rcs_silence_message">Mykistä viesti-ilmoitukset</string>
+  <string name="rcs_summary_auto_resend_mms">Muunna China Mobilen multimediaviestit tekstiviesteiksi alkuperäisen epäonnistuneen viestin lähettämisen jälkeen. Operaattorisi veloittaa sinua tästä viestistä.</string>
+  <string name="rcs_summary_auto_resend_sms">Muunna China Mobilen tekstiviestit normaaleiksi tekstiviesteiksi alkuperäisen epäonnistuneen viestin lähettämisen jälkeen. Operaattorisi veloittaa sinua tästä viestistä.</string>
+  <string name="rcs_summary_silence_message">Mykistä viesti-ilmoitukset, kun työpöytäsovellus on käytössä</string>
+  <string name="rcs_wait_for_retry_text">Odotetaan…</string>
   <string name="received_at_time">Vastaanotettu klo: %1s</string>
   <string name="received_label">"Vastaanotettu: "</string>
   <string name="recipient_editor_count_format">%d</string>
   <string name="recipient_label">"Vastaanottaja: "</string>
   <string name="recipients_over_size">Liian monta vastaanottajaa.</string>
+  <string name="recommend_bar_cancel">Hylkää</string>
+  <string name="recommend_bar_message_mx">Mi Viestin avulla voit lähettää viestejä toisiin MIUI-laitteisiin ilman maksuja.</string>
+  <string name="recommend_bar_message_mx_rcs">Mi Viestin avulla voit lähettää viestejä toisiin MIUI-laitteisiin ja China Mobile:n käyttäjille ilman maksuja.</string>
+  <string name="recommend_bar_message_rcs">China Mobile Viestinnän avulla voit lähettää viestejä toisille käyttäjille ilman maksuja.</string>
+  <string name="recommend_bar_message_smart_message">Kopioi kertakäyttösalasanat, seuraa pakettejasi, käytä älyvalikkoja ja paljon muuta</string>
+  <string name="recommend_bar_ok">Ota käyttöön</string>
+  <string name="recommend_bar_title_mx_rcs">Mi Viesti</string>
+  <string name="recommend_bar_title_smart_message">Älykäs Viestintä</string>
   <string name="recording_failed">Ei voi nauhoittaa</string>
   <string name="refill_now">Top up nyt</string>
   <string name="refreshing">Päivitetään…</string>
@@ -511,6 +576,24 @@
   <string name="restore_blocked_message">Palauta</string>
   <string name="restore_to_phone_memory_failed">Palauttaminen epäonnistui</string>
   <string name="restored_to_phone_memory">Palautettu</string>
+  <string name="rms_audio_body">[Ääni]</string>
+  <string name="rms_audio_file_duration_too_long">Voit lähettää enintään 180 sekuntia pitkän äänen</string>
+  <string name="rms_audio_file_length_too_large">Voit lähettää enintään %1$d Mt kokoisen äänen</string>
+  <string name="rms_card_body">[Kortti]</string>
+  <string name="rms_cloud_file_body">[Pilvitiedosto]</string>
+  <string name="rms_emoticon_body">[Emoji]</string>
+  <string name="rms_file_body">[Tiedosto]</string>
+  <string name="rms_file_not_exist">Tiedostoa ei ole olemassa</string>
+  <string name="rms_file_not_exist_to_view">Tämä tiedosto on siirretty tai poistettu</string>
+  <string name="rms_illegal_extension">Virheellinen tiedostomuoto</string>
+  <string name="rms_image_body">[Kuva]</string>
+  <string name="rms_location_body">[Sijainti]</string>
+  <string name="rms_normal_file_length_too_large">Voit lähettää enintään %1$d Mt kokoisen tiedoston</string>
+  <string name="rms_original_image_length_too_large">Voit lähettää enintään %1$d Mt kokoisen alkuperäisen kuvan</string>
+  <string name="rms_original_image_size_too_large">Näyttää siltä, että alkuperäinen kuva on liian suuri</string>
+  <string name="rms_text_body">[Teksti]</string>
+  <string name="rms_vcard_body">[Yhteystieto]</string>
+  <string name="rms_video_body">[Video]</string>
   <string name="save">Tallenna</string>
   <string name="save_ringtone">Tallenna soittoääneksi</string>
   <string name="save_to_sim">Tallenna SIM-kortille</string>
@@ -555,6 +638,8 @@
   <string name="send_message_notification_msg">Näytä pyyntötiedot napauttamalla.</string>
   <string name="send_message_notification_tickerText">Laite pyytää käyttöoikeutta</string>
   <string name="send_message_notification_title">Käyttöoikeuspyyntö</string>
+  <string name="send_rms_editor_hints">China Mobile Viestintä</string>
+  <string name="send_rms_editor_hints_omit">Mi Viesti</string>
   <string name="send_signature_confirm_dialog_message">Sisältöä ei löytynyt. Lähetetäänkö vain sinun allekirjoituksesi?</string>
   <string name="send_signature_confirm_dialog_title">Lähetä viesti</string>
   <string name="send_sms">Lähetä viesti</string>
@@ -679,6 +764,7 @@ Yritys tehty: %s."</string>
   <string name="url_fraud_visit">Siirry silti</string>
   <string name="url_result_safe">Tämä URL-osoite on turvallinen</string>
   <string name="url_scanning">Tarkistetaan URL-osoitetta…</string>
+  <string name="user_agreement">Käyttöehdot</string>
   <string name="verification_code_icon_name">V</string>
   <string name="verification_code_list_title">Vahvistuskoodit</string>
   <string name="view">Näytä</string>
