--- a/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
@@ -61,6 +61,8 @@
   <string name="asset_sync_power_alert_message">Varmuuskopioi kappaleita yhdistämällä laturi.</string>
   <string name="asset_sync_power_alert_title">Akku vähissä</string>
   <string name="audio_picker_title">Valitse kappale</string>
+  <string name="auto_update">Päivitä automaattisesti</string>
+  <string name="auto_update_tip">Voit päivittää järjestelmäsovelluksia käyttäen mobiilidataa. Tämä saattaa lisätä lisäkustannuksia.</string>
   <string name="available_playlist_name_format">Uusi soittolista %d</string>
   <string name="avoid_to_use_traffic_summary">Älä käytä mobiilidata-yhteyttä musiikin suoratoistoon</string>
   <string name="avoid_to_use_traffic_title">Näytä ponnahdusikkuna, kun käytät mobiilidataa kappaleiden soittamiseen</string>
@@ -87,7 +89,6 @@
   <string name="change_download_quality">Vaihda latauksen laatu</string>
   <string name="checking_new_version">Tarkistetaan päivityksiä…</string>
   <string name="choose_download_quality">Valitse latauksen laatu</string>
-  <string name="choose_language">Valitse kieli</string>
   <string name="choose_stream_quality">Valitse suoratoiston laatu</string>
   <string name="click_to_shuffle">Sekoita soittolista koskettamalla</string>
   <string name="close_music_time">"Aikaa jäljellä: "</string>
@@ -390,6 +391,9 @@
   <string name="home_tab_online">Online-musiikki</string>
   <string name="hot_icon_in_fast_indexer">H</string>
   <string name="hungama">Hungama</string>
+  <string name="hungama_category_playlist">Soittolista</string>
+  <string name="hungama_category_radio">Radio</string>
+  <string name="hungama_category_video">Video</string>
   <string name="hungama_pro">Hungama Pro</string>
   <string name="hungama_subscribe_message">Osta PRO-jäsenyys lataaksesi korkealaatuista musiikkia.</string>
   <string name="hungama_subscribe_positive_button">Osta PRO-jäsenyys</string>
@@ -421,6 +425,10 @@
   <string name="karaoke_title">Esittelyssä karaoke</string>
   <string name="keep_queued_download">Säilytä</string>
   <string name="ktv_playlist">KTV soittolista</string>
+  <string name="language_page_confirm">Vahvista</string>
+  <string name="language_preference">Kieliasetukset</string>
+  <string name="language_preference_desc">Valitse haluamasi kielet saadaksesi parempia suosituksia</string>
+  <string name="languages">Kielet</string>
   <string name="latest_song">Soittohistoria (%d).</string>
   <string name="like">Tykkää</string>
   <string name="list_item_play_all_tracks">Toista kaikki</string>
@@ -475,8 +483,6 @@
   <string name="miuishare_share_editor_title">Jaa</string>
   <string name="miuishare_title_more">Lisää</string>
   <string name="miuishare_title_share">Jaa</string>
-  <string name="miuishare_wechat_timeline_title">Wechat hetket</string>
-  <string name="miuishare_weibo_title">Weibo</string>
   <string name="mobile_recommended_title">Mobiilidatan käyttö</string>
   <string name="modify_lyric">Muokkaa sanoituksia</string>
   <string name="modify_progress">Muuta sanoituksien vierintänopeutta</string>
@@ -485,14 +491,16 @@
   <string name="modify_song_info_success">Kappaleen tiedot päivitettiin</string>
   <string name="more">Lisää</string>
   <string name="more_add_song_list">Lisää kappaleita jonoon</string>
-  <string name="more_milink">MI Linkki</string>
+  <string name="more_milink">Mi Linkki</string>
   <string name="more_settings">Lisäasetukset</string>
-  <string name="more_settings_summary">Nukkuma-ajastin, tiedostosuodattimet jne.</string>
+  <string name="more_settings_summary">Nukkuma-ajastin, tiedostojen suodattaminen ja paljon muuta</string>
   <string name="more_share">Jaa</string>
   <string name="music_browser_label">Musiikki</string>
   <string name="music_filter">Suodata äänitiedostoja</string>
   <string name="music_service">Musiikkipalvelu</string>
   <string name="music_settings">Musiikki</string>
+  <string name="mv_metered_play_summary">Älä näytä tiedonsiirtovaroitusta</string>
+  <string name="mv_metered_play_title">Toista online-videot käyttäen mobiilidataa</string>
   <string name="my_account">Mi Tili</string>
   <string name="my_music_empty">Soittolista on tyhjä.</string>
   <string name="my_music_empty_goto_online">Kappaleita ei löytynyt</string>
@@ -514,12 +522,13 @@
   <string name="no_online_song_selected">Kappaleita ei ole valittuna</string>
   <string name="no_results_return">Ei hakutuloksia</string>
   <string name="no_scanned_songs">Tyhjä</string>
-  <string name="no_song_downloaded">Palvelimeen ei saatu yhteyttä</string>
+  <string name="no_song_downloaded">Ladattavia kappaleita ei löytynyt</string>
   <string name="no_song_subtitle">Uppoudu ääniin</string>
   <string name="no_song_title">Mi Musiikki</string>
   <string name="no_system_cropper_find">Järjestelmässä ei ole kuvan rajaustyökalua.</string>
   <string name="normal_quality">Hyvä</string>
   <string name="not_login">Ei kirjautuneena</string>
+  <string name="not_now">Ei nyt</string>
   <string name="not_selected">Valitse kappale</string>
   <string name="nothing_changed_toast">Et ole muuttanut vielä mitään.</string>
   <string name="notif_title_file_size">%1$d yhteensä</string>
@@ -644,12 +653,16 @@
   <string name="search_songs_count">Kappaleet: %d</string>
   <string name="search_title">Haku</string>
   <string name="second_symbol">s</string>
+  <string name="select">Valitse</string>
   <string name="select_all">Valitse kaikki</string>
+  <string name="select_desc_sub">Voit valita enintään 3 kieltä</string>
   <string name="select_device">Valitse laite</string>
   <string name="select_displayed_folders">Valitse näytettävät kansiot</string>
   <string name="select_local_cover">Valitse paikallinen kansikuva</string>
   <string name="select_local_lyric_file">Valitse paikallinen sanoitustiedosto</string>
   <string name="select_none">Poista valinnat</string>
+  <string name="select_one_language">Valitse vähintään 1 kieli</string>
+  <string name="select_three_languages">Voit valita vähintään 3 kieltä</string>
   <string name="selected_count">Valittuna %1$d/%2$d</string>
   <string name="send_to_title">Lähetä kohteeseen (%1$s)</string>
   <string name="server_connection_failed">Pahoittelut, sinun täytyy olla online-tilassa käyttääksesi tätä ominaisuutta</string>
@@ -745,6 +758,7 @@
   <string name="talkback_search">Haku</string>
   <string name="talkback_show_navigation_draw">Näytä laatikko</string>
   <string name="terms_of_service">Palveluehdot</string>
+  <string name="test_mode">Testitila</string>
   <string name="text_separator">|</string>
   <string name="ticket_summary">Osta lippuja näytöksiin, konsertteihin, esitelmiin ja muihin tapahtumiin</string>
   <string name="ticket_title">Näytä liput</string>
