--- a/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
@@ -21,7 +21,7 @@
   <string name="app_search">Hae sovelluksia</string>
   <string name="btn_send">Lähetä</string>
   <string name="bugreport_dialog_not_show_again">Älä näytä uudelleen</string>
-  <string name="bugreport_dialog_submit_content">Tallennat sovelluslokeja tälle laitteelle nyt. Lokit saattaa sisältää henkilökohtaisia tietoja ja sijaintitietosi. Älä jaa lokeja kenenkään kanssa, jos et tahdo näiden tietojen tulevan julki.</string>
+  <string name="bugreport_dialog_submit_content">Tallennat sovelluslokeja tälle laitteelle nyt. Lokit saattaa sisältää henkilökohtaisia tietoja ja sijaintitietosi. Älä jaa lokeja kenenkään kanssa, jos et tahdo näiden tietojen tulevan julki. Valitsemalla \"Hyväksyn"\ tarkoittaa, että olet lukenut ja hyväksyt meidän Tietosuojakäytännön ja Käyttöehdot.</string>
   <string name="bugreport_dump_complete_notification_summary">Napauta katsoaksesi.</string>
   <string name="bugreport_dump_complete_notification_title">Luo virheraportti</string>
   <string name="bugreport_dump_start_notification_summary">Tämä saattaa kestää useita minuutteja.</string>
@@ -266,6 +266,7 @@
   <string name="plus_one_submit_dialog_content">Palautteesi, sisältäen liitetiedot ja virhelokit lähetetään MIUI:n palvelimille. Se saattaa sisältää henkilökohtaista tietoa ja sijaintitietosi.</string>
   <string name="plus_one_submit_dialog_not_show_again">Muista valinta</string>
   <string name="post_miui_bbs_failed">Foorumille postitus epäonnistui</string>
+  <string name="privacy_category_title">Tietosuoja</string>
   <string name="privacy_policy_title">Tietosuojakäytäntö</string>
   <string name="pull_to_refresh_pull_label">Vedä alas päivittääksesi</string>
   <string name="pull_to_refresh_refreshing_label">Päivitetään…</string>
@@ -290,8 +291,8 @@
   <string name="select_system_app_tag">Valitse ongelma</string>
   <string name="submit_dialog_cancel">En hyväksy</string>
   <string name="submit_dialog_confirm">Hyväksyn</string>
-  <string name="submit_dialog_content">Palautteesi, liitetiedostot ja lokitiedostot lähetetään MIUI:n palvelimille. Se saattaa sisältää henkilökohtaisia tietoja.</string>
-  <string name="submit_dialog_content_global">Palautteesi, sisältäen liitetiedot (jos liitetty) ja virhelokit (voit poistaa valinnat niistä valintalaatikoista joita et tahdo lähettää) lähetetään MIUI:n palvelimille ja rajoitetulle MIUI:n keskustelupalstan kehittäjille. Palstojesi ja keskustelupalstan aktiviteettitietosi myös kerätään analysoitavaksi ja tuleviin yhteydenottoihin. Lokitiedot saattaa sisältää henkilokohtaisia tietoja ja sijaintitietosi.</string>
+  <string name="submit_dialog_content">Palautteesi, liitetiedostot ja lokitiedostot lähetetään MIUI:n palvelimille. Se saattaa sisältää henkilökohtaisia tietoja. Valitsemalla \"Hyväksyn"\ tarkoittaa, että olet lukenut ja hyväksyt meidän Tietosuojakäytännön ja Käyttöehdot.</string>
+  <string name="submit_dialog_content_global">Palautteesi, sisältäen liitetiedot (jos liitetty) ja virhelokit (voit poistaa valinnat niistä valintalaatikoista joita et tahdo lähettää) lähetetään MIUI:n palvelimille ja rajoitetulle MIUI:n keskustelupalstan kehittäjille. Palstojesi ja keskustelupalstan aktiviteettitietosi myös kerätään analysoitavaksi ja tuleviin yhteydenottoihin. Lokitiedot saattaa sisältää henkilokohtaisia tietoja ja sijaintitietosi. Valitsemalla \"Hyväksyn"\ tarkoittaa, että olet lukenut ja hyväksyt meidän Tietosuojakäytännön ja Käyttöehdot.</string>
   <string name="submit_dialog_title">Lähetä raportti</string>
   <string name="submit_feedback_info_failed">Raporttia ei voitu lähettää</string>
   <string name="suggestion_description">Lisää selitys tähän</string>
