--- a/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/strings.xml
@@ -272,6 +272,7 @@
   <string name="pref_summary_no_limit_popup">Rajoittamaton</string>
   <string name="pref_title_enable_max_bytes_popup">Näytä datankäyttö-ilmoitus</string>
   <string name="preferences_title">Asetukset</string>
+  <string name="privacy_policy">Tietosuojakäytäntö</string>
   <string name="privacy_tip_cancel">Peruuta</string>
   <string name="privacy_tip_content">Käytetäänkö Xunlei Kiihdyttäjää nopeuttaaksesi latauksia? Latauksen URL-osoite lähetetään Xunlein palvelimille. Mi Tilisi tiedot lähetetään myös ja tarkistetaan onko sinulla palvelussa aktiivisia tilauksia.</string>
   <string name="privacy_tip_ok">OK</string>
